--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-birdnetlib==0.14.0
-librosa==0.10.1
-tensorflow==2.15.0
-sounddevice==0.4.6
-soundfile==0.12.1
-wandb==0.16.2
+birdnetlib
+librosa
+tensorflow
+sounddevice
+soundfile
+wandb
